--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,19 +2,30 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
-=head1 4.6.0 Alpha 2
+=head1 4.6.0 Beta 1
 
-=head2 Summary 4.6.0 Alpha 2
+=head2 Summary 4.6.0 Beta 1
 
-v4.6.0  introduces Amazon SES support. This allows you to send email 
-messages with Dada Mail using the Amazon SES Web Service. This feature is currently labeled, 
-I<Experimental>. 
+This release 
+
+=head2 Features 4.6.0 Beta 1 
+
+=head3 Amazon SES Mail Sending Support
+
+Amazon SES allows you to send email messages with Dada Mail using the Amazon 
+SES Web Service. This feature is currently labeled, I<Experimental>. 
 
 =head3 See Also: 
 
-L<http://dadamailproject.com/support/documentation/features-amazon_ses_support.pod.html>
+L<http://dadamailproject.com/d/features-amazon_ses_support.pod.html>
 
-=head2 Features 4.6.0 Alpha 2 
+=head3 Forward to a Friend
+
+It's now easier to write in a, "Forward to a Friend" feature in your messages. 
+
+=head4 More Information: 
+
+L<http://dadamailproject.com/d/features_forward_to_a_friend.pod.html>
 
 =head3 Installer Enhancements
 
@@ -24,6 +35,28 @@ plugins and extensions that come with Dada Mail.
 The installer also gives you the option, when used to upgrade your current Dada Mail, 
 to either keep your current C<.dada_config> file, or to create a new C<.dada_config> file, 
 while also keeping your current C<.dada_files> directory structure and contents. 
+
+=head2 Changes 4.6.0 Beta 1 
+
+=head3 Default Mailing List Message Templates
+
+The default mailing list message templates have been changed to be less verbose 
+and to include the "Forward to a Friend" link
+
+=head3 GeoIP data updated
+
+The freshest GeoIP data has been included with Dada Mail
+
+=head3 Social Bookmarking Links Updated
+
+The Facebook link has been replaced by the Facebook, B<Like> button and 
+the, B<Plus Google> button has been added. 
+
+=head2 Bug Fixes 4.6.0 Beta 1 
+
+=head3 POP3 Login Paramaters not getting passed correctly?
+
+https://github.com/justingit/dada-mail/issues/164
 
 =head1 4.5.2
 
